c4prj2_input/grade.txt
Grading at Mon 11 Mar 2024 03:01:41 AM UTC
Compiling cards.c -> cards.o
Compiling deck.c -> deck.o
Compiling input.c -> input.o
input.c: In function ‘hand_from_string’:
input.c:33:1: error: ISO C forbids nested functions [-Werror=pedantic]
   33 | deck_t ** read_input(FILE * f, size_t * n_hands, future_cards_t * fc){
      | ^~~~~~
input.c:51:1: error: expected declaration or statement at end of input
   51 | }
      | ^
input.c:51: error: control reaches end of non-void function [-Werror=return-type]
   51 | }
      | 
At top level:
input.c:33:11: error: ‘read_input’ defined but not used [-Werror=unused-function]
   33 | deck_t ** read_input(FILE * f, size_t * n_hands, future_cards_t * fc){
      |           ^~~~~~~~~~
cc1: all warnings being treated as errors
Compilation of input.c failed

Overall Grade: F
